@@ -15,6 +15,8 @@ Right click on many button to directly access the corresponding setup form.
 More DSS online server.
 Update SAC database to version 8.1.
 On Mac OS X the user setting directory change from ~/.skychart to ~/Library/Application Support/skychart
+Fix tcp/ip server on Mac OS X.
+Draw a small circle to indicate the search result.
 Many bug fix.
 
 The full change log is here:
